--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,9 @@
       <nav class="nav">
         <ul>
           <li>
-            <a href="#"><img src="" alt="Gllacy shop logo"></a>
+            <a href="#">
+              <img src="img/logo.png" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
+            </a>
           </li>
           <li>
             <a href="#">Каталог</a>
@@ -48,13 +50,17 @@
       </nav>
       <div class="header-buttons">
         <div class="btn btn_small btn_search">
-          <a href="#" class="search-icon">Поиск</a>
+          <a href="#" class="search-icon">
+            <img src="img/magnifier-icon.png" alt="Иконка поиска по сайту" width="17" height="17">Поиск
+          </a>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
           </div>
         </div>
         <div class="btn btn_small btn_enter">
-          <a href="#" class="enter-icon">Вход</a>
+          <a href="#" class="enter-icon">
+            <img src="img/enter-icon.png" alt="Иконка входа" width="21" height="19">Вход
+          </a>
           <div class="popup">
             <form action="" method="" id="sign-in">
               <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -66,7 +72,8 @@
           </div>
         </div>
         <div class="btn btn_small btn_cart">
-          <a href="#" class="basket basket__active">2 товара</a>
+          <a href="#" class="basket basket__active"><img src="img/cart-full-icon.png" alt="Иконка корзины" width="21"
+              height="20">2 товара</a>
           <div class="popup">
             <form id="cart" method="" action="">
               <table>
@@ -170,7 +177,8 @@
       <section class="container-prices">
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-orange-circle.png" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
+              width="267" height="267">
             <p class="price">310&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
@@ -178,7 +186,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-coffee-circle.png" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267"
+              height="267">
             <p class="price">380&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
@@ -186,7 +195,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-strawberry-circle.png" alt="Фото сливочно-клубничного мороженого" class="price-img"
+              width="267" height="267">
             <p class="price">355&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
@@ -194,7 +204,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creme-brulee-circle.png" alt="Фото сливочного мороженого крем-брюле" class="price-img" width="267"
+              height="267">
             <p class="price">415&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
@@ -202,7 +213,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-cowberry-jam-circle.png" alt="Фото сливочного мороженого с брусничным джемом" class="price-img"
+              width="267" height="267">>
             <p class="price">325&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с брусничным джемом</p>
@@ -210,7 +222,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-blueberry-circle.png" alt="Фото сливочно-черничного мороженого" class="price-img"
+              width="267" height="267">
             <p class="price">410&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочно-черничное с цельными ягодами черники</p>
@@ -218,7 +231,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-lemon-circle.png" alt="Фото сливочно-лимонного мороженого" class="price-img" width="267"
+              height="267">
             <p class="price">375&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочно-лимонное с карамельной присыпкой</p>
@@ -226,7 +240,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-chocolate-chips-circle.png" alt="Фото сливочного мороженого c шоколадной стружкой" class="price-img" width="267"
+              height="267">
             <p class="price">320&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с шоколадной стружкой</p>
@@ -234,7 +249,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-vanilla-chocolate-chips-circle.png" alt="Фото сливочно-ванильного мороженого" class="price-img"
+              width="267" height="267">
             <p class="price">440&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочно-ванильное с кусочками шоколада</p>
@@ -242,7 +258,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+            <img src="img/creamy-menthol-circle.png" alt="Фото сливочного мороженогос с ментоловым сиропом" class="price-img"
+              width="267" height="267">
             <p class="price">435&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с ментоловым сиропом</p>
@@ -250,7 +267,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+              <img src="img/creamy-chocolate-pieces-circle.png" alt="Фото сливочного мороженогос с кусочками шоколада" class="price-img"
+              width="267" height="267">
             <p class="price">355&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с кусочками черного шоколада</p>
@@ -258,7 +276,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="" alt="" class="price-img">
+              <img src="img/creamy-mint-circle.png" alt="Фото сливочного мороженогос с мятным сиропом" class="price-img"
+              width="267" height="267">
             <p class="price">420&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с мятным сиропом</p>
@@ -277,14 +296,14 @@
     </main>
     <footer>
       <div class="social">
-        <a href="#" class="twitter">Твиттер</a>
-        <a href="#" class="instagram">Инстаграм</a>
-        <a href="#" class="facebook">Фейсбук</a>
-        <a href="#" class="vkontakt">Вконтакте</a>
+        <a href="#" class="twitter"><img src="img/twitter-icon.png" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
+        <a href="#" class="instagram"><img src="img/instagram-icon.png" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
+        <a href="#" class="facebook"><img src="img/facebook-icon.png" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
+        <a href="#" class="vkontakt"><img src="img/vkontakt-icon.png" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
       </div>
       <ul class="footer-nav">
         <li>
-          <a href="#" class="active">Для поставщиков</a>
+          <a href="#" class="active"><a href="#" class="active"><img src="img/heart-icon.png" alt="Иконка сердца" width="15" height="13">Для поставщиков</a>
         </li>
         <li>
           <a href="#" class="active">О производстве</a>
@@ -297,7 +316,9 @@
         </li>
       </ul>
       <div class="copyright">
-        <img src="" alt="html academy" class="html-logo">
+        <a href="https://htmlacademy.ru/">
+          <img class="html-logo" src="img/logo-htmlacademy-small.png" alt="Логотип Html академии" width="108" height="39">
+        </a>
         <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
       </div>
     </footer>
