Add images for button icons
Fixes #1

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="header-buttons">
           <div class="btn btn_small btn_search">
             <a href="#" class="search-icon">
-              <img src="img/magnifier-icon.png" alt="Иконка поиска по сайту" width="17" height="17">
+              <img src="img/magnifier-icon.png" alt="Иконка поиска по сайту" width="17" height="17">Поиск
             </a>
             <form class="popup" action="" method="" id="search">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
@@ -126,7 +126,8 @@
         <section class="container-prices">
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creamy-orange-circle.png" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img" width="267" height="267">
+              <img src="img/creamy-orange-circle.png" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
+                width="267" height="267">
               <p class="price">310&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
@@ -134,7 +135,8 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creamy-coffee-circle.png" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267" height="267">
+              <img src="img/creamy-coffee-circle.png" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267"
+                height="267">
               <p class="price">380&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочно-кофейное с кусочками шоколада</p>
@@ -142,7 +144,8 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creamy-strawberry-circle.png" alt="Фото сливочно-клубничного мороженого" class="price-img" width="267" height="267">
+              <img src="img/creamy-strawberry-circle.png" alt="Фото сливочно-клубничного мороженого" class="price-img"
+                width="267" height="267">
               <p class="price">355&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
@@ -150,7 +153,8 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creme-brulee-circle.png" alt="Фото сливочного мороженого крем-брюле" class="price-img" width="267" height="267">
+              <img src="img/creme-brulee-circle.png" alt="Фото сливочного мороженого крем-брюле" class="price-img"
+                width="267" height="267">
               <p class="price">415&#8381;/кг</p>
             </div>
             <p class="card-description">Сливочное крем-брюле с карамельной подливкой</p>
@@ -208,7 +212,8 @@
         <div class="footer-nav">
           <ul>
             <li>
-              <a href="#" class="active"><img src="img/heart-icon.png" alt="Иконка сердца"  width="15" height="13">Для поставщиков</a>
+              <a href="#" class="active"><img src="img/heart-icon.png" alt="Иконка сердца" width="15" height="13">Для
+                поставщиков</a>
             </li>
             <li>
               <a href="#" class="active">О производстве</a>
@@ -223,7 +228,7 @@
         </div>
         <div class="copyright">
           <a href="https://htmlacademy.ru/">
-            <img class="html-logo" src="img/logo-htmlacademy-small.png" alt="Логотип Html академии"  width="108" height="39">
+            <img class="html-logo" src="img/logo-htmlacademy-small.png" alt="Логотип Html академии" width="108" height="39">
           </a>
           <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
         </div>
