--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
         <ul>
           <li>
             <a href="#">
-              <img src="img/logo.png" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
+              <img src="img/logo.svg" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
             </a>
           </li>
           <li>
@@ -51,7 +51,7 @@
       <div class="header-buttons">
         <div class="btn btn_small btn_search">
           <a href="#" class="search-icon">
-            <img src="img/magnifier-icon.png" alt="Иконка поиска по сайту" width="17" height="17">Поиск
+            <img src="img/magnifier-icon.svg" alt="Иконка поиска по сайту" width="17" height="17">Поиск
           </a>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
@@ -59,7 +59,7 @@
         </div>
         <div class="btn btn_small btn_enter">
           <a href="#" class="enter-icon">
-            <img src="img/enter-icon.png" alt="Иконка входа" width="21" height="19">Вход
+            <img src="img/enter-icon.svg" alt="Иконка входа" width="21" height="19">Вход
           </a>
           <div class="popup">
             <form action="" method="" id="sign-in">
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="btn btn_small btn_cart">
-          <a href="#" class="basket basket__active"><img src="img/cart-full-icon.png" alt="Иконка корзины" width="21"
+          <a href="#" class="basket basket__active"><img src="img/cart-icon.svg" alt="Иконка корзины" width="21"
               height="20">2 товара</a>
           <div class="popup">
             <form id="cart" method="" action="">
@@ -177,7 +177,7 @@
       <section class="container-prices">
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-orange-circle.png" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
+            <img src="img/creamy-orange-circle.jpg" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
               width="267" height="267">
             <p class="price">310&#8381;/кг</p>
           </div>
@@ -186,7 +186,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-coffee-circle.png" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267"
+            <img src="img/creamy-coffee-circle.jpg" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267"
               height="267">
             <p class="price">380&#8381;/кг</p>
           </div>
@@ -195,7 +195,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-strawberry-circle.png" alt="Фото сливочно-клубничного мороженого" class="price-img"
+            <img src="img/creamy-strawberry-circle.jpg" alt="Фото сливочно-клубничного мороженого" class="price-img"
               width="267" height="267">
             <p class="price">355&#8381;/кг</p>
           </div>
@@ -204,7 +204,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creme-brulee-circle.png" alt="Фото сливочного мороженого крем-брюле" class="price-img" width="267"
+            <img src="img/creme-brulee-circle.jpg" alt="Фото сливочного мороженого крем-брюле" class="price-img" width="267"
               height="267">
             <p class="price">415&#8381;/кг</p>
           </div>
@@ -213,7 +213,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-cowberry-jam-circle.png" alt="Фото сливочного мороженого с брусничным джемом" class="price-img"
+            <img src="img/creamy-cowberry-jam-circle.jpg" alt="Фото сливочного мороженого с брусничным джемом" class="price-img"
               width="267" height="267">>
             <p class="price">325&#8381;/кг</p>
           </div>
@@ -222,7 +222,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-blueberry-circle.png" alt="Фото сливочно-черничного мороженого" class="price-img"
+            <img src="img/creamy-blueberry-circle.jpg" alt="Фото сливочно-черничного мороженого" class="price-img"
               width="267" height="267">
             <p class="price">410&#8381;/кг</p>
           </div>
@@ -231,7 +231,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-lemon-circle.png" alt="Фото сливочно-лимонного мороженого" class="price-img" width="267"
+            <img src="img/creamy-lemon-circle.jpg" alt="Фото сливочно-лимонного мороженого" class="price-img" width="267"
               height="267">
             <p class="price">375&#8381;/кг</p>
           </div>
@@ -240,7 +240,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-chocolate-chips-circle.png" alt="Фото сливочного мороженого c шоколадной стружкой" class="price-img" width="267"
+            <img src="img/creamy-chocolate-chips-circle.jpg" alt="Фото сливочного мороженого c шоколадной стружкой" class="price-img" width="267"
               height="267">
             <p class="price">320&#8381;/кг</p>
           </div>
@@ -249,7 +249,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-vanilla-chocolate-chips-circle.png" alt="Фото сливочно-ванильного мороженого" class="price-img"
+            <img src="img/creamy-vanilla-chocolate-chips-circle.jpg" alt="Фото сливочно-ванильного мороженого" class="price-img"
               width="267" height="267">
             <p class="price">440&#8381;/кг</p>
           </div>
@@ -258,7 +258,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-menthol-circle.png" alt="Фото сливочного мороженогос с ментоловым сиропом" class="price-img"
+            <img src="img/creamy-menthol-circle.jpg" alt="Фото сливочного мороженогос с ментоловым сиропом" class="price-img"
               width="267" height="267">
             <p class="price">435&#8381;/кг</p>
           </div>
@@ -267,7 +267,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-              <img src="img/creamy-chocolate-pieces-circle.png" alt="Фото сливочного мороженогос с кусочками шоколада" class="price-img"
+              <img src="img/creamy-chocolate-pieces-circle.jpg" alt="Фото сливочного мороженогос с кусочками шоколада" class="price-img"
               width="267" height="267">
             <p class="price">355&#8381;/кг</p>
           </div>
@@ -276,7 +276,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-              <img src="img/creamy-mint-circle.png" alt="Фото сливочного мороженогос с мятным сиропом" class="price-img"
+              <img src="img/creamy-mint-circle.jpg" alt="Фото сливочного мороженогос с мятным сиропом" class="price-img"
               width="267" height="267">
             <p class="price">420&#8381;/кг</p>
           </div>
@@ -296,14 +296,14 @@
     </main>
     <footer>
       <div class="social">
-        <a href="#" class="twitter"><img src="img/twitter-icon.png" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
-        <a href="#" class="instagram"><img src="img/instagram-icon.png" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
-        <a href="#" class="facebook"><img src="img/facebook-icon.png" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
-        <a href="#" class="vkontakt"><img src="img/vkontakt-icon.png" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
+        <a href="#" class="twitter"><img src="img/twitter-icon.svg" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
+        <a href="#" class="instagram"><img src="img/instagram-icon.svg" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
+        <a href="#" class="facebook"><img src="img/facebook-icon.svg" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
+        <a href="#" class="vkontakt"><img src="img/vkontakt-icon.svg" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
       </div>
       <ul class="footer-nav">
         <li>
-          <a href="#" class="active"><a href="#" class="active"><img src="img/heart-icon.png" alt="Иконка сердца" width="15" height="13">Для поставщиков</a>
+          <a href="#" class="active"><a href="#" class="active"><img src="img/heart-icon.svg" alt="Иконка сердца" width="15" height="13">Для поставщиков</a>
         </li>
         <li>
           <a href="#" class="active">О производстве</a>
@@ -317,7 +317,7 @@
       </ul>
       <div class="copyright">
         <a href="https://htmlacademy.ru/">
-          <img class="html-logo" src="img/logo-htmlacademy-small.png" alt="Логотип Html академии" width="108" height="39">
+          <img class="html-logo" src="img/logo-htmlacademy-small.svg" alt="Логотип Html академии" width="108" height="39">
         </a>
         <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
       </div>
