--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li>
               <a href="#">
-                <img src="img/logo.png" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
+                <img src="img/logo.svg" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
               </a>
             </li>
             <li>
@@ -55,7 +55,7 @@
         <div class="header-buttons">
           <div class="btn btn_small btn_search">
             <a href="#" class="search-icon">
-              <img src="img/magnifier-icon.png" alt="Иконка поиска по сайту" width="17" height="17">Поиск
+              <img src="img/magnifier-icon.svg" alt="Иконка поиска по сайту" width="17" height="17">Поиск
             </a>
             <form class="popup" action="" method="" id="search">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
@@ -63,7 +63,7 @@
           </div>
           <div class="btn btn_small btn_enter">
             <a href="#" class="enter-icon">
-              <img src="img/enter-icon.png" alt="Иконка входа" width="21" height="19">Вход
+              <img src="img/enter-icon.svg" alt="Иконка входа" width="21" height="19">Вход
             </a>
             <div class="popup">
               <form action="" method="" id="sign-in">
@@ -77,7 +77,7 @@
           </div>
           <div class="btn btn_small btn_cart">
             <a href="#" class="basket">
-              <img src="img/cart-empty-icon.png" alt="Иконка корзины" width="21" height="20">Пусто
+              <img src="img/cart-icon.svg" alt="Иконка корзины" width="21" height="20">Пусто
             </a>
           </div>
         </div>
@@ -126,7 +126,7 @@
         <section class="container-prices">
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creamy-orange-circle.png" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
+              <img src="img/creamy-orange-circle.jpg" alt="Фото сливочного мороженого с апельсиновым джемом" class="price-img"
                 width="267" height="267">
               <p class="price">310&#8381;/кг</p>
             </div>
@@ -135,7 +135,7 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creamy-coffee-circle.png" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267"
+              <img src="img/creamy-coffee-circle.jpg" alt="Фото сливочно-кофейного мороженого" class="price-img" width="267"
                 height="267">
               <p class="price">380&#8381;/кг</p>
             </div>
@@ -144,7 +144,7 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creamy-strawberry-circle.png" alt="Фото сливочно-клубничного мороженого" class="price-img"
+              <img src="img/creamy-strawberry-circle.jpg" alt="Фото сливочно-клубничного мороженого" class="price-img"
                 width="267" height="267">
               <p class="price">355&#8381;/кг</p>
             </div>
@@ -153,7 +153,7 @@
           </div>
           <div class="price-card">
             <div class="img-container">
-              <img src="img/creme-brulee-circle.png" alt="Фото сливочного мороженого крем-брюле" class="price-img"
+              <img src="img/creme-brulee-circle.jpg" alt="Фото сливочного мороженого крем-брюле" class="price-img"
                 width="267" height="267">
               <p class="price">415&#8381;/кг</p>
             </div>
@@ -166,17 +166,17 @@
             <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на
               развес</h3>
             <div class="description-container">
-              <img src="img/ice-cream-icon.png" alt="Иконка мороженого на палочке" width="49" height="49">
+              <img src="img/ice-cream-icon.svg" alt="Иконка мороженого на палочке" width="49" height="49">
               <p class="description-item">Все наше мороженое изготавливается на собственном производстве, с
                 использованием современного оборудования и проверенных временем технологий.</p>
-              <img src="img/leaf-icon.png" alt="Иконка листа растения" width="49" height="49">
+              <img src="img/leaf-icon.svg" alt="Иконка листа растения" width="49" height="49">
               <p class="description-item">Для приготовления мороженого используются настоящие сливки и молоко
                 высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,
                 экологически чистого сырья.</p>
-              <img src="img/cow-icon.png" alt="Иконка головы коровы" width="49" height="49">
+              <img src="img/cow-icon.svg" alt="Иконка головы коровы" width="49" height="49">
               <p class="description-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и
                 компаний, с которыми нас связывает долговременное сотрудничество.</p>
-              <img src="img/thermometer-icon.png" alt="Иконка градусника" width="49" height="49">
+              <img src="img/thermometer-icon.svg" alt="Иконка градусника" width="49" height="49">
               <p class="description-item">Доставка нашего мороженого до заказчиков осуществляется в специальном
                 термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
             </div>
@@ -204,15 +204,15 @@
     <footer>
       <div class="container">
         <div class="social">
-          <a href="#" class="twitter"><img src="img/twitter-icon.png" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
-          <a href="#" class="instagram"><img src="img/instagram-icon.png" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
-          <a href="#" class="facebook"><img src="img/facebook-icon.png" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
-          <a href="#" class="vkontakt"><img src="img/vkontakt-icon.png" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
+          <a href="#" class="twitter"><img src="img/twitter-icon.svg" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
+          <a href="#" class="instagram"><img src="img/instagram-icon.svg" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
+          <a href="#" class="facebook"><img src="img/facebook-icon.svg" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
+          <a href="#" class="vkontakt"><img src="img/vkontakt-icon.svg" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
         </div>
         <div class="footer-nav">
           <ul>
             <li>
-              <a href="#" class="active"><img src="img/heart-icon.png" alt="Иконка сердца" width="15" height="13">Для
+              <a href="#" class="active"><img src="img/heart-icon.svg" alt="Иконка сердца" width="15" height="13">Для
                 поставщиков</a>
             </li>
             <li>
@@ -228,7 +228,7 @@
         </div>
         <div class="copyright">
           <a href="https://htmlacademy.ru/">
-            <img class="html-logo" src="img/logo-htmlacademy-small.png" alt="Логотип Html академии" width="108" height="39">
+            <img class="html-logo" src="img/logo-htmlacademy-small.svg" alt="Логотип Html академии" width="108" height="39">
           </a>
           <span>Сделано в <a rel="license" href="https://htmlacademy.ru/docs/license">HTML Academy</a> &copy; 2017</span>
         </div>
