fix: Remove redundant img tags for decorative imgs
They will be implemented through using pseudoelements

Fixes #1

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <nav class="nav">
           <ul>
             <li>
-              <a href="#">
-                <img src="img/logo.svg" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
-              </a>
+              <a href="#">Глейси Логотип</a>
             </li>
             <li>
               <a href="#">Каталог</a>
@@ -54,17 +52,13 @@
         </nav>
         <div class="header-buttons">
           <div class="btn btn_small btn_search">
-            <a href="#" class="search-icon">
-              <img src="img/magnifier-icon.svg" alt="Иконка поиска по сайту" width="17" height="17">Поиск
-            </a>
+            <a href="#" class="search-icon">Поиск</a>
             <form class="popup" action="" method="" id="search">
               <input type="search" name="q" id="site-search" placeholder="Что ищем?">
             </form>
           </div>
           <div class="btn btn_small btn_enter">
-            <a href="#" class="enter-icon">
-              <img src="img/enter-icon.svg" alt="Иконка входа" width="21" height="19">Вход
-            </a>
+            <a href="#" class="enter-icon">Вход</a>
             <div class="popup">
               <form action="" method="" id="sign-in">
                 <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -76,9 +70,7 @@
             </div>
           </div>
           <div class="btn btn_small btn_cart">
-            <a href="#" class="basket">
-              <img src="img/cart-icon.svg" alt="Иконка корзины" width="21" height="20">Пусто
-            </a>
+            <a href="#" class="basket">Корзина</a>
           </div>
         </div>
       </header>
@@ -166,17 +158,13 @@
             <h3>Maгазин Глэйси &mdash; это онлайн- и офлайн-магазин по продаже мороженного собственного производства на
               развес</h3>
             <div class="description-container">
-              <img src="img/ice-cream-icon.svg" alt="Иконка мороженого на палочке" width="49" height="49">
               <p class="description-item">Все наше мороженое изготавливается на собственном производстве, с
                 использованием современного оборудования и проверенных временем технологий.</p>
-              <img src="img/leaf-icon.svg" alt="Иконка листа растения" width="49" height="49">
               <p class="description-item">Для приготовления мороженого используются настоящие сливки и молоко
                 высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,
                 экологически чистого сырья.</p>
-              <img src="img/cow-icon.svg" alt="Иконка головы коровы" width="49" height="49">
               <p class="description-item">Закупка ингредиентов производится только у проверенных фермерских хозяйств и
                 компаний, с которыми нас связывает долговременное сотрудничество.</p>
-              <img src="img/thermometer-icon.svg" alt="Иконка градусника" width="49" height="49">
               <p class="description-item">Доставка нашего мороженого до заказчиков осуществляется в специальном
                 термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
             </div>
@@ -204,16 +192,15 @@
     <footer>
       <div class="container">
         <div class="social">
-          <a href="#" class="twitter"><img src="img/twitter-icon.svg" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
-          <a href="#" class="instagram"><img src="img/instagram-icon.svg" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
-          <a href="#" class="facebook"><img src="img/facebook-icon.svg" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
-          <a href="#" class="vkontakt"><img src="img/vkontakt-icon.svg" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
+          <a href="#" class="twitter">Твиттер</a>
+          <a href="#" class="instagram">Инстаграм</a>
+          <a href="#" class="facebook">Фейсбук</a>
+          <a href="#" class="vkontakt">Вконтакте</a>
         </div>
         <div class="footer-nav">
           <ul>
             <li>
-              <a href="#" class="active"><img src="img/heart-icon.svg" alt="Иконка сердца" width="15" height="13">Для
-                поставщиков</a>
+              <a href="#" class="active">Для поставщиков</a>
             </li>
             <li>
               <a href="#" class="active">О производстве</a>
