--- a/catalog.html
+++ b/catalog.html
@@ -16,9 +16,7 @@
       <nav class="nav">
         <ul>
           <li>
-            <a href="#">
-              <img src="img/logo.svg" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
-            </a>
+            <a href="#">Глейси Логотип</a>
           </li>
           <li>
             <a href="#">Каталог</a>
@@ -50,17 +48,13 @@
       </nav>
       <div class="header-buttons">
         <div class="btn btn_small btn_search">
-          <a href="#" class="search-icon">
-            <img src="img/magnifier-icon.svg" alt="Иконка поиска по сайту" width="17" height="17">Поиск
-          </a>
+          <a href="#" class="search-icon">Поиск</a>
           <div class="popup">
             <input type="search" name="q" id="site-search" placeholder="Что ищем?">
           </div>
         </div>
         <div class="btn btn_small btn_enter">
-          <a href="#" class="enter-icon">
-            <img src="img/enter-icon.svg" alt="Иконка входа" width="21" height="19">Вход
-          </a>
+          <a href="#" class="enter-icon">Вход</a>
           <div class="popup">
             <form action="" method="" id="sign-in">
               <input type="email" id="user-login" name="login" placeholder="Электронная почта">
@@ -72,8 +66,7 @@
           </div>
         </div>
         <div class="btn btn_small btn_cart">
-          <a href="#" class="basket basket__active"><img src="img/cart-icon.svg" alt="Иконка корзины" width="21"
-              height="20">2 товара</a>
+          <a href="#" class="basket basket__active">Корзина</a>
           <div class="popup">
             <form id="cart" method="" action="">
               <table>
@@ -240,8 +233,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-            <img src="img/creamy-chocolate-chips-circle.jpg" alt="Фото сливочного мороженого c шоколадной стружкой" class="price-img" width="267"
-              height="267">
+            <img src="img/creamy-chocolate-chips-circle.jpg" alt="Фото сливочного мороженого c шоколадной стружкой"
+              class="price-img" width="267" height="267">
             <p class="price">320&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с шоколадной стружкой</p>
@@ -267,8 +260,8 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-              <img src="img/creamy-chocolate-pieces-circle.jpg" alt="Фото сливочного мороженогос с кусочками шоколада" class="price-img"
-              width="267" height="267">
+            <img src="img/creamy-chocolate-pieces-circle.jpg" alt="Фото сливочного мороженогос с кусочками шоколада"
+              class="price-img" width="267" height="267">
             <p class="price">355&#8381;/кг</p>
           </div>
           <p class="card-description">Сливочное с кусочками черного шоколада</p>
@@ -276,7 +269,7 @@
         </div>
         <div class="price-card">
           <div class="img-container">
-              <img src="img/creamy-mint-circle.jpg" alt="Фото сливочного мороженогос с мятным сиропом" class="price-img"
+            <img src="img/creamy-mint-circle.jpg" alt="Фото сливочного мороженогос с мятным сиропом" class="price-img"
               width="267" height="267">
             <p class="price">420&#8381;/кг</p>
           </div>
@@ -296,14 +289,14 @@
     </main>
     <footer>
       <div class="social">
-        <a href="#" class="twitter"><img src="img/twitter-icon.svg" alt="Иконка твиттера" width="32" height="32">Твиттер</a>
-        <a href="#" class="instagram"><img src="img/instagram-icon.svg" alt="Иконка инстаграм" width="32" height="32">Инстаграм</a>
-        <a href="#" class="facebook"><img src="img/facebook-icon.svg" alt="Иконка фейсбук" width="32" height="32">Фейсбук</a>
-        <a href="#" class="vkontakt"><img src="img/vkontakt-icon.svg" alt="Иконка вконтакте" width="32" height="32">Вконтакте</a>
+        <a href="#" class="twitter">Твиттер</a>
+        <a href="#" class="instagram">Инстаграм</a>
+        <a href="#" class="facebook">Фейсбук</a>
+        <a href="#" class="vkontakt">Вконтакте</a>
       </div>
       <ul class="footer-nav">
         <li>
-          <a href="#" class="active"><a href="#" class="active"><img src="img/heart-icon.svg" alt="Иконка сердца" width="15" height="13">Для поставщиков</a>
+          <a href="#" class="active"><a href="#" class="active">Для поставщиков</a>
         </li>
         <li>
           <a href="#" class="active">О производстве</a>
