fix: Return gllacy logo img element in nav
Fixes #1

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,9 @@
       <nav class="nav">
         <ul>
           <li>
-            <a href="#">Глейси Логотип</a>
+            <a href="#">
+              <img src="img/logo.svg" alt="Логотип интернет магазина мороженного Глейси" width="154" height="64">
+            </a>
           </li>
           <li>
             <a href="#">Каталог</a>
